unpackaged/main/default/objects/On_Off_Boarding__c/fields/Mi_to_Km__c.field-meta.xml
<CustomField>
    <fullName>Mi_to_Km__c</fullName>
    <formula>Travel_Cap_Mi__c *1.609</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mi to Km</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>