unpackaged/main/default/objects/On_Off_Boarding__c/fields/Operating_Hours__c.field-meta.xml
<CustomField>
    <fullName>Operating_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please reference FSL TimeZone</inlineHelpText>
    <label>Operating Hours</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OperatingHours.Name</field>
            <operation>contains</operation>
            <value>NO SHIFT</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>OperatingHours</referenceTo>
    <relationshipLabel>On/Off Boarding</relationshipLabel>
    <relationshipName>On_Off_Boarding</relationshipName>
    <type>Lookup</type>
</CustomField>