unpackaged/main/default/objects/On_Off_Boarding__c/fields/Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>Other_Phone__c</fullName>
    <inlineHelpText>Please enter a valid 11-digit phone number, ex 19991234567</inlineHelpText>
    <label>Other Phone</label>
    <type>Phone</type>
</CustomField>