unpackaged/main/default/objects/On_Off_Boarding__c/fields/P2P_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>P2P_Completed_Date__c</fullName>
    <label>P2P Completed Date</label>
    <type>Date</type>
</CustomField>