unpackaged/main/default/objects/On_Off_Boarding__c/fields/Payroll_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Cycle__c</fullName>
    <label>Payroll Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Resource_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PR = Payroll LTS Employee</fullName>
            </value>
            <value>
                <fullName>XT = Contractor</fullName>
            </value>
            <value>
                <fullName>ZT = Do not Generate Pay</fullName>
            </value>
            <value>
                <fullName>PE Payroll - EFI</fullName>
                <isActive>false</isActive>
                <label>PE = Payroll - EFI</label>
            </value>
            <value>
                <fullName>WT = Contractor EF&amp;I</fullName>
                <isActive>false</isActive>
                <label>WT = Contractor EF&amp;I</label>
            </value>
            <value>
                <fullName>YT = Contractor Falcon</fullName>
                <isActive>false</isActive>
                <label>YT = Contractor Falcon</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>