unpackaged/main/default/objects/On_Off_Boarding__c/fields/Peer_To_Peer_Training__c.field-meta.xml
<CustomField>
    <fullName>Peer_To_Peer_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Peer To Peer Training</label>
    <type>Checkbox</type>
</CustomField>