unpackaged/main/default/objects/On_Off_Boarding__c/fields/Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permission Set</label>
    <type>Checkbox</type>
</CustomField>