unpackaged/main/default/objects/On_Off_Boarding__c/fields/POP_Capacity_Allocation__c.field-meta.xml
<CustomField>
    <fullName>POP_Capacity_Allocation__c</fullName>
    <label>POP Capacity Allocation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backfilling Pop Capacity</fullName>
            </value>
            <value>
                <fullName>Pop Capacity Expansion</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>