unpackaged/main/default/objects/On_Off_Boarding__c/fields/Primary_Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Primary_Service_Territory__c</fullName>
    <label>Primary Service Territory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>State_Territory</valueSetName>
    </valueSet>
</CustomField>