unpackaged/main/default/objects/On_Off_Boarding__c/fields/Region_Old__c.field-meta.xml
<CustomField>
    <fullName>Region_Old__c</fullName>
    <label>Region(Old)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AB-SK</fullName>
            </value>
            <value>
                <fullName>AB-Telus</fullName>
            </value>
            <value>
                <fullName>BC</fullName>
            </value>
            <value>
                <fullName>BC-Telus</fullName>
            </value>
            <value>
                <fullName>MB</fullName>
            </value>
            <value>
                <fullName>ON-A</fullName>
            </value>
            <value>
                <fullName>ON-B</fullName>
            </value>
            <value>
                <fullName>QC-Atlantic</fullName>
            </value>
            <value>
                <fullName>Central US</fullName>
            </value>
            <value>
                <fullName>East Central</fullName>
            </value>
            <value>
                <fullName>Greater Chicago</fullName>
            </value>
            <value>
                <fullName>Mid-Atlantic</fullName>
            </value>
            <value>
                <fullName>Northeast</fullName>
            </value>
            <value>
                <fullName>Northwest</fullName>
            </value>
            <value>
                <fullName>South Central</fullName>
            </value>
            <value>
                <fullName>Southeast</fullName>
            </value>
            <value>
                <fullName>Southern US</fullName>
            </value>
            <value>
                <fullName>Southwest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>