unpackaged/main/default/objects/On_Off_Boarding__c/fields/Regional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Area Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>On_Off_Boarding_RM</relationshipName>
    <type>Lookup</type>
</CustomField>