unpackaged/main/default/objects/On_Off_Boarding__c/fields/Resource_Planning_Completed__c.field-meta.xml
<CustomField>
    <fullName>Resource_Planning_Completed__c</fullName>
    <label>Resource Planning Completed</label>
    <type>Date</type>
</CustomField>