unpackaged/main/default/objects/On_Off_Boarding__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <label>Resource Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contract_ID__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Area Manager</fullName>
            </value>
            <value>
                <fullName>BIR Internal</fullName>
            </value>
            <value>
                <fullName>FLM Internal</fullName>
            </value>
            <value>
                <fullName>BIR Contractor</fullName>
            </value>
            <value>
                <fullName>FLM Contractor</fullName>
            </value>
            <value>
                <fullName>FTE to Contractor</fullName>
            </value>
            <value>
                <fullName>Contractor to FTE</fullName>
            </value>
            <value>
                <fullName>BIR Employee</fullName>
                <isActive>false</isActive>
                <label>BIR Employee</label>
            </value>
            <value>
                <fullName>BTV Contractor</fullName>
                <isActive>false</isActive>
                <label>BTV Contractor</label>
            </value>
            <value>
                <fullName>BTV Employee</fullName>
                <isActive>false</isActive>
                <label>BTV Employee</label>
            </value>
            <value>
                <fullName>EF&amp;I Contractor</fullName>
                <isActive>false</isActive>
                <label>EF&amp;I Contractor</label>
            </value>
            <value>
                <fullName>EF&amp;I Employee</fullName>
                <isActive>false</isActive>
                <label>EF&amp;I Employee</label>
            </value>
            <value>
                <fullName>FLM Employee</fullName>
                <isActive>false</isActive>
                <label>FLM Employee</label>
            </value>
            <value>
                <fullName>Falcon Contractor</fullName>
                <isActive>false</isActive>
                <label>Falcon Contractor</label>
            </value>
            <value>
                <fullName>Falcon Employee</fullName>
                <isActive>false</isActive>
                <label>Falcon Employee</label>
            </value>
            <value>
                <fullName>Ledcor</fullName>
                <isActive>false</isActive>
                <label>Ledcor</label>
            </value>
            <value>
                <fullName>Rogers Drops Contractor</fullName>
                <isActive>false</isActive>
                <label>Rogers Drops Contractor</label>
            </value>
            <value>
                <fullName>Rogers Drops Employee</fullName>
                <isActive>false</isActive>
                <label>Rogers Drops Employee</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>