unpackaged/main/default/objects/On_Off_Boarding__c/fields/Send_Guide_Msg__c.field-meta.xml
<CustomField>
    <fullName>Send_Guide_Msg__c</fullName>
    <label>Send Guide/Msg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>