unpackaged/main/default/objects/On_Off_Boarding__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ServiceTerritory.ParentTerritoryId</field>
            <operation>notEqual</operation>
            <value>Null</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>On/Off Boarding</relationshipLabel>
    <relationshipName>On_Off_Boarding</relationshipName>
    <type>Lookup</type>
</CustomField>