unpackaged/main/default/objects/On_Off_Boarding__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin Contractor CAN</fullName>
            </value>
            <value>
                <fullName>Admin Contractor USA</fullName>
            </value>
            <value>
                <fullName>Bell FTTP - Locates CAN</fullName>
            </value>
            <value>
                <fullName>Bell Ground Level Box - Locates CAN</fullName>
            </value>
            <value>
                <fullName>Bell Nexxia BMO - Install</fullName>
            </value>
            <value>
                <fullName>Bell Nexxia BMO - Repair</fullName>
            </value>
            <value>
                <fullName>Business Aerial or Conduit BC</fullName>
            </value>
            <value>
                <fullName>Business Buried BC</fullName>
            </value>
            <value>
                <fullName>CN Rail - Locates CAN</fullName>
            </value>
            <value>
                <fullName>Comcast CAN - Install</fullName>
            </value>
            <value>
                <fullName>Comcast CAN - Repair</fullName>
            </value>
            <value>
                <fullName>Comcast USA - Install</fullName>
            </value>
            <value>
                <fullName>Comcast USA - Repair</fullName>
            </value>
            <value>
                <fullName>FIN Drops</fullName>
            </value>
            <value>
                <fullName>Hibernia - Locates CAN</fullName>
            </value>
            <value>
                <fullName>Hibernia Offrail - Locates CAN</fullName>
            </value>
            <value>
                <fullName>Infinera Certified - ISP US</fullName>
            </value>
            <value>
                <fullName>Kentucky Wired - Build Support</fullName>
            </value>
            <value>
                <fullName>Kentucky Wired - Escort US</fullName>
            </value>
            <value>
                <fullName>Kentucky Wired - ISP US</fullName>
            </value>
            <value>
                <fullName>Kentucky Wired - Locates US</fullName>
            </value>
            <value>
                <fullName>Kentucky Wired - OSP US</fullName>
            </value>
            <value>
                <fullName>Kentucky Wired - PMR US</fullName>
            </value>
            <value>
                <fullName>Kentucky Wired - Site Migration</fullName>
            </value>
            <value>
                <fullName>Kentucky Wired - TTBF US</fullName>
            </value>
            <value>
                <fullName>Masergy - Install</fullName>
            </value>
            <value>
                <fullName>Masergy - Repair</fullName>
            </value>
            <value>
                <fullName>Monitor Only - Locates US</fullName>
            </value>
            <value>
                <fullName>Non-Billable Customer Admin BIR CAN</fullName>
            </value>
            <value>
                <fullName>Non-Billable Customer Admin BIR USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>