unpackaged/main/default/objects/On_Off_Boarding__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <label>Skill</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allstream Cleared</fullName>
            </value>
            <value>
                <fullName>ATT Badged</fullName>
            </value>
            <value>
                <fullName>AVALANCHE Annual Certification</fullName>
            </value>
            <value>
                <fullName>Aviat US</fullName>
            </value>
            <value>
                <fullName>BASF/OBS Freeport TX - Badged</fullName>
            </value>
            <value>
                <fullName>BASF/OBS Geismar LA - Badged</fullName>
            </value>
            <value>
                <fullName>BASF/OBS Palmyra MO - Badged</fullName>
            </value>
            <value>
                <fullName>BASF/OBS Port Arthur TX - Badged</fullName>
            </value>
            <value>
                <fullName>BASF/OBS Wyandotte MI - Badged</fullName>
            </value>
            <value>
                <fullName>Bell</fullName>
            </value>
            <value>
                <fullName>Bell Engineering</fullName>
            </value>
            <value>
                <fullName>Bell Locates</fullName>
            </value>
            <value>
                <fullName>Bell Nexxia</fullName>
            </value>
            <value>
                <fullName>Centurylink FLM</fullName>
            </value>
            <value>
                <fullName>Ciena General Badged and Trained</fullName>
            </value>
            <value>
                <fullName>Ciena - States Bank</fullName>
            </value>
            <value>
                <fullName>Ciena-Verizon Badged</fullName>
            </value>
            <value>
                <fullName>Comcast Business</fullName>
            </value>
            <value>
                <fullName>Comcast Install</fullName>
            </value>
            <value>
                <fullName>Comcast Install Starbucks</fullName>
            </value>
            <value>
                <fullName>Comcast Repair</fullName>
            </value>
            <value>
                <fullName>COVID Vaccinated</fullName>
            </value>
            <value>
                <fullName>E-RAIL Certified &amp; Badged</fullName>
            </value>
            <value>
                <fullName>Fujitsu Depot Audit</fullName>
            </value>
            <value>
                <fullName>GCNET Public Work</fullName>
            </value>
            <value>
                <fullName>GCNET RCMP</fullName>
            </value>
            <value>
                <fullName>Genesis ATS</fullName>
            </value>
            <value>
                <fullName>Google Red Badge</fullName>
            </value>
            <value>
                <fullName>GTT/Hibernia</fullName>
            </value>
            <value>
                <fullName>Infinera AMC Certified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>