unpackaged/main/default/objects/On_Off_Boarding__c/fields/Spares_Depot__c.field-meta.xml
<CustomField>
    <fullName>Spares_Depot__c</fullName>
    <label>Spares Depot</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calgary, AB Warehouse</fullName>
            </value>
            <value>
                <fullName>Edmonton, AB Warehouse</fullName>
            </value>
            <value>
                <fullName>Medicine Hat, AB Depot</fullName>
            </value>
            <value>
                <fullName>Kamloops, BC Depot</fullName>
            </value>
            <value>
                <fullName>Kelowna, BC Depot - Unit C553</fullName>
            </value>
            <value>
                <fullName>Kelowna, BC Depot - Unit C566</fullName>
            </value>
            <value>
                <fullName>Port Moody, BC Warehouse</fullName>
            </value>
            <value>
                <fullName>Vancouver, BC Warehouse</fullName>
            </value>
            <value>
                <fullName>Victoria, BC Depot - Unit 408</fullName>
            </value>
            <value>
                <fullName>Victoria, BC Depot - Unit 416</fullName>
            </value>
            <value>
                <fullName>Brandon, MB Depot</fullName>
            </value>
            <value>
                <fullName>Winnipeg, MB Depot</fullName>
            </value>
            <value>
                <fullName>Fredericton, NB Depot</fullName>
            </value>
            <value>
                <fullName>Moncton, NB Depot</fullName>
            </value>
            <value>
                <fullName>St. Johns NL Depot</fullName>
            </value>
            <value>
                <fullName>Halifax, NS Depot</fullName>
            </value>
            <value>
                <fullName>London, ON Depot</fullName>
            </value>
            <value>
                <fullName>Mississauga, ON Warehouse</fullName>
            </value>
            <value>
                <fullName>Ottawa, ON Depot</fullName>
            </value>
            <value>
                <fullName>Sudbury, ON Depot</fullName>
            </value>
            <value>
                <fullName>Thunder Bay, ON Depot</fullName>
            </value>
            <value>
                <fullName>Windsor, ON Depot</fullName>
            </value>
            <value>
                <fullName>Montreal, QC Depot</fullName>
            </value>
            <value>
                <fullName>Quebec City, QC Depot</fullName>
            </value>
            <value>
                <fullName>Regina, SK Depot</fullName>
            </value>
            <value>
                <fullName>Saskatoon, SK Depot</fullName>
            </value>
            <value>
                <fullName>Marana, AZ Depot - Unit E080</fullName>
            </value>
            <value>
                <fullName>Sierra Vista, AZ Depot - Unit M644</fullName>
            </value>
            <value>
                <fullName>Tempe, AZ Depot - Unit 336</fullName>
            </value>
            <value>
                <fullName>Yuma, AZ Depot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>