unpackaged/main/default/objects/On_Off_Boarding__c/fields/State_Prov__c.field-meta.xml
<CustomField>
    <fullName>State_Prov__c</fullName>
    <label>State/Prov</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>State_Territory</valueSetName>
    </valueSet>
</CustomField>