unpackaged/main/default/objects/On_Off_Boarding__c/fields/Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead__c</fullName>
    <inlineHelpText>Reference base on Hiring Manager</inlineHelpText>
    <label>Team Lead</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Hiring_Manager__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Angel Rodarte</fullName>
                <label>Angel Rodarte (BIR)</label>
            </value>
            <value>
                <fullName>Brian Trzeciak</fullName>
                <label>Brian Trzeciak (FLM)</label>
            </value>
            <value>
                <fullName>Brock R Kvamme</fullName>
            </value>
            <value>
                <fullName>Clarence F Dalcour</fullName>
                <label>Clarence F Dalcour (FLM)</label>
            </value>
            <value>
                <fullName>Dan Carpiniello</fullName>
            </value>
            <value>
                <fullName>Frank P Ardelean Jr</fullName>
            </value>
            <value>
                <fullName>Holley S Wills</fullName>
            </value>
            <value>
                <fullName>James Sanders</fullName>
                <label>James Sanders (FLM)</label>
            </value>
            <value>
                <fullName>Jason W Banks</fullName>
            </value>
            <value>
                <fullName>Joseph A Martin Jr</fullName>
            </value>
            <value>
                <fullName>Mario H Sandoval</fullName>
                <label>Jason W Banks/ Mario H Sandoval</label>
            </value>
            <value>
                <fullName>Mark Dykes</fullName>
                <label>Mark Dykes (BIR)</label>
            </value>
            <value>
                <fullName>Rocky O Lensegrav</fullName>
            </value>
            <value>
                <fullName>Stacy M Scheff</fullName>
                <label>Stacy M Scheff (BIR)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>