unpackaged/main/default/objects/On_Off_Boarding__c/fields/Tech_on_Leave__c.field-meta.xml
<CustomField>
    <fullName>Tech_on_Leave__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The technician will be deactivated after 3 months on Leave</inlineHelpText>
    <label>Tech on Leave</label>
    <type>Checkbox</type>
</CustomField>