unpackaged/main/default/objects/On_Off_Boarding__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>On/Off Boarding</relationshipLabel>
    <relationshipName>On_Off_Boarding</relationshipName>
    <type>Lookup</type>
</CustomField>