unpackaged/main/default/objects/On_Off_Boarding__c/fields/Test_Set__c.field-meta.xml
<CustomField>
    <fullName>Test_Set__c</fullName>
    <label>Test Set</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXFO</fullName>
            </value>
            <value>
                <fullName>VIAVI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>