unpackaged/main/default/objects/On_Off_Boarding__c/fields/Tier_Level__c.field-meta.xml
<CustomField>
    <fullName>Tier_Level__c</fullName>
    <label>Tier Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>