unpackaged/main/default/objects/On_Off_Boarding__c/fields/Time_Zone_Code__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone_Code__c</fullName>
    <label>Time Zone Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State_Prov__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>03 - Alaska</fullName>
            </value>
            <value>
                <fullName>07 - Atlantic Time (Canada)</fullName>
            </value>
            <value>
                <fullName>20 - Central Time (US &amp; Canada)</fullName>
            </value>
            <value>
                <fullName>23 - Eastern Time (US &amp; Canada)</fullName>
            </value>
            <value>
                <fullName>29 - Hawaii</fullName>
            </value>
            <value>
                <fullName>42 - Mountain Time (US &amp; Canada)</fullName>
            </value>
            <value>
                <fullName>43 - Newfoundland</fullName>
            </value>
            <value>
                <fullName>44 - Pacific Time (US &amp; Canada)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>