unpackaged/main/default/objects/On_Off_Boarding__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <label>Trainer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clancy O&#39;Heffernan</fullName>
            </value>
            <value>
                <fullName>Eric Robbins</fullName>
            </value>
            <value>
                <fullName>John Amey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>