unpackaged/main/default/objects/On_Off_Boarding__c/fields/Travel_Cap_Km__c.field-meta.xml
<CustomField>
    <fullName>Travel_Cap_Km__c</fullName>
    <label>Travel Cap (Km)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>