unpackaged/main/default/objects/On_Off_Boarding__c/fields/Travel_Cap_Mi__c.field-meta.xml
<CustomField>
    <fullName>Travel_Cap_Mi__c</fullName>
    <label>Travel Cap (Mi)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>