unpackaged/main/default/objects/On_Off_Boarding__c/fields/Unpaid_Travel_Exempt_Flag__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Travel_Exempt_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unpaid Travel Exempt Flag</label>
    <type>Checkbox</type>
</CustomField>